# watlow_controller

./: .coverage  .gitignore  README.md  build.bat  program_editor.py  program_handler.py  pyproject.toml  todo.txt  tune_watlow.py  watlow_f4.py
.github/workflows/: ci.yml
tests/: test_smoke.py  test_watlow.py
watlow_controller/: __init__.py  main.py  watlow_f4.py  watlow_f4_dummy.py  watlow_f4_registers.py
