[project]
name = "watlow-controller"
version = "1.0.0"
description = "\"Library for controlling Watlow devices\""
authors = [
    {name = "Cameron Basham",email = "cambash23@gmail.com"}
]
license = {text = "GNU GENERAL PUBLIC LICENSE V3"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "minimalmodbus (>=2.1.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

